--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "target": "es2020",
     "module": "es2020",
     "moduleResolution": "Bundler",
-    "strictNullChecks": true,
-    "esModuleInterop": true
+    "baseUrl": ".",
+    "esModuleInterop": true,
+    "strictNullChecks": true
   },
   "include": [
     "./packages/**/*.ts"
