--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "@cldxiang"
+  "extends": [
+    "@cldxiang",
+    "plugin:@stylistic/migrate/recommended"
+  ],
+  "rules": {
+    "vue/multi-word-component-names": "off"
+  }
 }
