--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -17,12 +17,9 @@
     "typescript": ">=3.9"
   },
   "dependencies": {
-    "@cldxiang/eslint-config-basic": "workspace:*",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint-plugin-jest": "^27.2.3"
+    "@antfu/eslint-config-basic": "^0.43.0"
   },
   "devDependencies": {
-    "eslint": "^8.48.0"
+    "eslint": "^8.49.0"
   }
 }
