--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -17,7 +17,7 @@
     "typescript": ">=3.9"
   },
   "dependencies": {
-    "@antfu/eslint-config-basic": "^0.43.0"
+    "@antfu/eslint-config-ts": "^0.43.0"
   },
   "devDependencies": {
     "eslint": "^8.49.0"
