--- a/package.json
+++ b/package.json
@@ -1,21 +1,56 @@
 {
-  "name": "@cldxiang/eslint-config-monorepo",
+  "name": "@cldxiang/eslint-config",
+  "type": "module",
   "version": "0.2.2",
-  "private": true,
-  "packageManager": "pnpm@8.7.4",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
+  "packageManager": "pnpm@8.8.0",
+  "description": "CLDXiang's ESLint config",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "lint": "eslint .",
-    "test": "pnpm -r run test",
-    "release": "bumpp -r && pnpm -r publish"
+    "build": "tsup src/index.ts --format esm,cjs --clean --dts",
+    "stub": "tsup src/index.ts --format esm",
+    "dev": "tsup src/index.ts --format esm,cjs & eslint-flat-config-viewer",
+    "lint": "pnpm run stub && eslint .",
+    "prepack": "pnpm run build",
+    "release": "bumpp && pnpm publish",
+    "test": "vitest",
+    "typecheck": "tsc --noEmit",
+    "prepare": "simple-git-hooks"
+  },
+  "peerDependencies": {
+    "eslint": ">=8.0.0"
+  },
+  "dependencies": {
+    "@antfu/eslint-config": "^1.0.0-beta.18"
   },
   "devDependencies": {
-    "@cldxiang/eslint-config": "workspace:*",
-    "@stylistic/eslint-plugin-migrate": "^0.0.3",
+    "@types/fs-extra": "^11.0.2",
     "bumpp": "^9.2.0",
-    "eslint": "^8.49.0",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.2.2"
+    "eslint": "^8.50.0",
+    "eslint-flat-config-viewer": "^0.0.8",
+    "execa": "^7.2.0",
+    "fast-glob": "^3.3.1",
+    "fs-extra": "^11.1.1",
+    "lint-staged": "^14.0.1",
+    "simple-git-hooks": "^2.9.0",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
