--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
     "moduleResolution": "Bundler",
     "baseUrl": ".",
     "esModuleInterop": true,
-    "strictNullChecks": true
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": [
-    "./packages/**/*.ts"
+    "**/*.ts"
   ],
   "exclude": [
     "./fixtures/**/*.*"
