--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "eslint": ">=8.0.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.18"
+    "@antfu/eslint-config": "^1.0.0-beta.18",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "local-pkg": "^0.5.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.2",
+    "@types/node": "^20.8.0",
     "bumpp": "^9.2.0",
     "eslint": "^8.50.0",
     "eslint-flat-config-viewer": "^0.0.8",
-    "execa": "^7.2.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "lint-staged": "^14.0.1",
