--- a/package.json
+++ b/package.json
@@ -28,25 +28,27 @@
     "prepare": "simple-git-hooks"
   },
   "peerDependencies": {
-    "eslint": ">=8.0.0"
+    "eslint": ">=8.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.18",
-    "eslint-plugin-tailwindcss": "^3.13.0",
+    "@antfu/eslint-config": "^2.1.0",
     "local-pkg": "^0.5.0"
+
   },
   "devDependencies": {
-    "@types/fs-extra": "^11.0.2",
-    "@types/node": "^20.8.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.9.4",
     "bumpp": "^9.2.0",
-    "eslint": "^8.50.0",
-    "eslint-flat-config-viewer": "^0.0.8",
-    "fast-glob": "^3.3.1",
+    "eslint": "^8.54.0",
+    "eslint-flat-config-viewer": "^0.1.3",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "fast-glob": "^3.3.2",
     "fs-extra": "^11.1.1",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.1.0",
     "simple-git-hooks": "^2.9.0",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.2",
     "vitest": "^0.34.6"
   },
   "simple-git-hooks": {
