--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^2.1.0",
+    "eslint-plugin-toml": "^0.7.1",
     "local-pkg": "^0.5.0"
-
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
