--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@cldxiang/eslint-config",
   "type": "module",
   "version": "1.0.0",
-  "packageManager": "pnpm@8.8.0",
+  "packageManager": "pnpm@8.13.1",
   "description": "CLDXiang's ESLint config",
   "license": "MIT",
   "exports": {
@@ -20,10 +20,9 @@
     "build": "tsup src/index.ts --format esm,cjs --clean --dts",
     "stub": "tsup src/index.ts --format esm",
     "dev": "tsup src/index.ts --format esm,cjs & eslint-flat-config-viewer",
-    "lint": "pnpm run stub && eslint .",
+    "lint": "eslint .",
     "prepack": "pnpm run build",
     "release": "bumpp && pnpm publish",
-    "test": "vitest",
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks"
   },
@@ -32,24 +31,22 @@
     "eslint-plugin-tailwindcss": "^3.13.0"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^2.1.0",
-    "eslint-plugin-toml": "^0.7.1",
+    "@antfu/eslint-config": "^2.6.0",
     "local-pkg": "^0.5.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.9.4",
-    "bumpp": "^9.2.0",
-    "eslint": "^8.54.0",
+    "@types/node": "^20.10.5",
+    "bumpp": "^9.2.1",
+    "eslint": "npm:eslint-ts-patch@^8.56.0-0",
     "eslint-flat-config-viewer": "^0.1.3",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "fast-glob": "^3.3.2",
-    "fs-extra": "^11.1.1",
-    "lint-staged": "^15.1.0",
+    "fs-extra": "^11.2.0",
+    "lint-staged": "^15.2.0",
     "simple-git-hooks": "^2.9.0",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.2",
-    "vitest": "^0.34.6"
+    "typescript": "^5.3.3"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
